--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -84,6 +84,11 @@ bEnableMouseSmoothing=True
 bEnableFOVScaling=True
 bCaptureMouseOnLaunch=True
 bEnableLegacyInputScales=True
+bEnableMotionControls=True
+bFilterInputByPlatformUser=False
+bEnableInputDeviceSubsystem=True
+bShouldFlushPressedKeysOnViewportFocusLost=True
+bEnableDynamicComponentInputBinding=True
 bAlwaysShowTouchInterface=False
 bShowConsoleOnFourFingerTap=False
 bEnableGestureRecognizer=True
@@ -114,8 +119,8 @@ DoubleClickTime=0.200000
 +AxisMappings=(AxisName="MoveUp",Scale=1.000000,Key=Gamepad_RightTriggerAxis)
 +AxisMappings=(AxisName="MoveUp",Scale=-1.000000,Key=Gamepad_LeftTriggerAxis)
 +AxisMappings=(AxisName="TurnRate",Scale=1.000000,Key=MouseX)
-DefaultPlayerInputClass=/Script/Engine.PlayerInput
-DefaultInputComponentClass=/Script/Engine.InputComponent
+DefaultPlayerInputClass=/Script/EnhancedInput.EnhancedPlayerInput
+DefaultInputComponentClass=/Script/EnhancedInput.EnhancedInputComponent
 DefaultTouchInterface=/Game/ArchVizExplorer/Blueprints/My_VirtualJoysticks.My_VirtualJoysticks
 -ConsoleKeys=Tilde
 +ConsoleKeys=Tilde
