--- a/XL_Template.uproject
+++ b/XL_Template.uproject
@@ -3,31 +3,42 @@
 	"EngineAssociation": "5.3",
 	"Category": "",
 	"Description": "",
-	"Modules": [
-		{
-			"Name": "LiveBuild",
-			"Type": "Runtime",
-			"LoadingPhase": "Default"
-		}
-	],
 	"Plugins": [
 		{
-			"Name": "ModelingToolsEditorMode",
+			"Name": "Landmass",
+			"Enabled": true
+		},
+		{
+			"Name": "MetaShoot",
 			"Enabled": true,
-			"TargetAllowList": [
-				"Editor"
-			]
+			"MarketplaceURL": "com.epicgames.launcher://ue/marketplace/product/7dc2c35fc61c468484c94bc41669e891"
 		},
 		{
-			"Name": "DatasmithImporter",
+			"Name": "PCGGeometryScriptInterop",
 			"Enabled": true
 		},
 		{
-			"Name": "DataprepGeometryOperations",
+			"Name": "PCG",
 			"Enabled": true
 		},
 		{
-			"Name": "DataprepEditor",
+			"Name": "ScriptableToolsFramework",
+			"Enabled": true
+		},
+		{
+			"Name": "ScriptableToolsEditorMode",
+			"Enabled": true
+		},
+		{
+			"Name": "ScriptPlugin",
+			"Enabled": true
+		},
+		{
+			"Name": "ZoneGraph",
+			"Enabled": true
+		},
+		{
+			"Name": "MassAI",
 			"Enabled": true
 		},
 		{
@@ -43,22 +54,6 @@
 			"Enabled": true
 		},
 		{
-			"Name": "MassAI",
-			"Enabled": true
-		},
-		{
-			"Name": "RigLogic",
-			"Enabled": true
-		},
-		{
-			"Name": "ChaosVehiclesPlugin",
-			"Enabled": true
-		},
-		{
-			"Name": "EnhancedInput",
-			"Enabled": true
-		},
-		{
 			"Name": "SunPosition",
 			"Enabled": true
 		},
@@ -67,56 +62,24 @@
 			"Enabled": true
 		},
 		{
-			"Name": "HoudiniEngine",
-			"Enabled": false
-		},
-		{
 			"Name": "PixelStreaming",
 			"Enabled": true
 		},
 		{
-			"Name": "PCGGeometryScriptInterop",
+			"Name": "DatasmithImporter",
 			"Enabled": true
-		},
-		{
-			"Name": "PCG",
-			"Enabled": true
-		},
-		{
-			"Name": "MetaShoot",
-			"Enabled": true,
-			"MarketplaceURL": "com.epicgames.launcher://ue/marketplace/product/7dc2c35fc61c468484c94bc41669e891"
 		},
 		{
 			"Name": "DatasmithRuntime",
 			"Enabled": true
 		},
 		{
-			"Name": "DatasmithFBXImporter",
+			"Name": "DataprepEditor",
 			"Enabled": true
 		},
 		{
-			"Name": "HairStrands",
+			"Name": "DataprepGeometryOperations",
 			"Enabled": true
-		},
-		{
-			"Name": "LiveLink",
-			"Enabled": true
-		},
-		{
-			"Name": "LiveLinkControlRig",
-			"Enabled": true
-		},
-		{
-			"Name": "AppleARKitFaceSupport",
-			"Enabled": true,
-			"SupportedTargetPlatforms": [
-				"IOS",
-				"Win64",
-				"Mac",
-				"Linux",
-				"Android"
-			]
 		}
 	]
 }
