--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -69,6 +69,7 @@ bAuthorizeAutomaticWidgetVariableCreation=False
 [/Script/Engine.Engine]
 +ActiveGameNameRedirects=(OldGameName="TP_BlankBP",NewGameName="/Script/MyProjectempty")
 +ActiveGameNameRedirects=(OldGameName="/Script/TP_BlankBP",NewGameName="/Script/MyProjectempty")
+MaximumLoopIterationCount=1000000000
 
 [/Script/AndroidFileServerEditor.AndroidFileServerRuntimeSettings]
 bEnablePlugin=True
